[package]
name = "letsconnectdreams"
version = "0.1.0"
edition = "2024"

[dependencies]
bcrypt = "0.19.0"
diesel = { version = "2.3.9", features = ["postgres", "network-address", "numeric"] }
dotenvy = { version = "0.15" }
ipnetwork = "0.21.1"
rand = "0.8.0"
rsa = "0.9.10"

[profile.dev]
opt-level = 3
